--- a/brolingo/card/style.css
+++ b/brolingo/card/style.css
@@ -64,6 +64,10 @@ h6 {
 #__next {
   isolation: isolate;
 }
+.fancy button,
+.fancy button:hover {
+  box-shadow: none;
+}
 
 :root {
   --color-red-50: oklch(0.971 0.013 17.38);
@@ -332,6 +336,7 @@ h6 {
   justify-content: center;
   height: 100%;
   width: 100%;
+  font-weight: 500;
 }
 
 .container {
@@ -378,10 +383,31 @@ h6 {
   color: #9ef;
 }
 
-button.word-btn,
-button.word-btn:hover {
+button.check-button,
+button.check-button:hover {
+  border: none;
+  font-weight: 800;
+  padding: 13px 10px;
+  text-transform: uppercase;
+  border-radius: 15px;
+  box-shadow: inset 0 -4px 0 0 var(--color-lime-600);
+  background: var(--color-lime-500);
+  color: var(--color-white);
+  margin: 0;
+  width: 10rem;
+  min-width: fit-content;
+  text-align: center;
+}
+
+.validate-row {
+  justify-content: space-between;
+  display: flex;
+  flex-direction: row;
+  margin-top: 60px;
+}
+button.word-button {
   font-size: 18px;
-  font-weight: 400;
+  font-weight: 500;
   color: var(--color-zinc-700);
   padding: 10px 15px;
   border-radius: 10px;
@@ -393,9 +419,29 @@ button.word-btn:hover {
   margin: 0;
 }
 
-.word-btn.selected {
+button.skip-button {
+  font-weight: 800;
+  text-transform: uppercase;
+  color: var(--color-zinc-400);
+  padding: 10px 15px;
+  border-radius: 15px;
+  border: 2px solid var(--color-zinc-200);
+  border-bottom: 4px solid var(--color-zinc-200);
+  background: var(--color-white);
+  cursor: pointer;
+  font-family: var(--font-family);
+  margin: 0;
+  width: 10rem;
+}
+
+.word-button.selected {
   background: #6cf;
   color: #000;
+}
+
+.word-button.shadow {
+  background-color: var(--color-zinc-200);
+  color: var(--color-zinc-200);
 }
 
 .mascot-bubble {
@@ -444,6 +490,15 @@ button.word-btn:hover {
   width: 30px;
   fill: var(--color-sky-500);
 }
+.audio {
+  display: none;
+}
+.replay-button {
+  margin: 0;
+}
+.replay-button svg path {
+  fill: var(--color-sky-500);
+}
 
 .bubble-text {
   display: flex;
@@ -475,4 +530,9 @@ button.word-btn:hover {
   display: flex;
   flex-direction: row;
   justify-content: center;
+  flex-wrap: wrap;
+}
+
+#data {
+  display: none;
 }
